Style: entry teaser image floating - fix alignment

--- a/style.css
+++ b/style.css
@@ -778,7 +778,7 @@ address {
 	padding-bottom:			12px;
 }
 
-.post p > a > img {
+.post p > a > img.alignleft {
 	float: left;
 }
 
